--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             <input type="number" id="irrigationEfficiency" name="irrigationEfficiency" step="0.1" required><br>
 
             <label for="recentRainfall">Recent Rainfall (mm):</label>
-            <input type
-="number" id="recentRainfall" name="recentRainfall" step="0.1" required><br>
+            <input type="number" id="recentRainfall" name="recentRainfall" step="0.1" required><br>
 
             <button type="button" onclick="calculateIrrigation()">Calculate</button>
         </form>
